random-restart-server.yml
apiVersion: v1
kind: Pod
metadata:  annotations:    cni.projectcalico.org/containerID: 3c9d1c0b6f4923bee8cd163c7af9784f359ffdc4e87bd03c9eb4fd81f2801eec
    cni.projectcalico.org/podIP: 192.168.194.67/32
    cni.projectcalico.org/podIPs: 192.168.194.67/32
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"name":"beebox-shipping-data","namespace":"default"},"spec":{"containers":[{"image":"linuxacademycontent/random-crashing-web-server:1","name":"shipping-data"}],"restartPolicy":"Never"}}
  creationTimestamp: "2022-04-22T00:06:03Z"
  name: beebox-shipping-data
  namespace: default
  resourceVersion: "844"
  uid: c9e279c9-5d14-418e-914c-cd9625ef2f77
spec:
  containers:
  - image: linuxacademycontent/random-crashing-web-server:1
    imagePullPolicy: IfNotPresent
    name: shipping-data
    livenessProbe:
      httpGet:
        path: /
        port: 8080
      initialDelaySeconds: 5
      periodSeconds: 5
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-t2lk5
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: k8s-worker1
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-t2lk5
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2022-04-22T00:06:30Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2022-04-22T00:07:08Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2022-04-22T00:07:08Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2022-04-22T00:06:30Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://e12c3a6e33ee9cda59e1d6829a87c3c553d7779685356069483e52a1e21502b4
    image: docker.io/linuxacademycontent/random-crashing-web-server:1
    imageID: docker.io/linuxacademycontent/random-crashing-web-server@sha256:961fb2f1241af9bd1de39d62aaac28a55fa0ec215b86a0c1f67c49a13cbcd0e2
    lastState: {}
    name: shipping-data
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2022-04-22T00:07:08Z"
  hostIP: 10.0.1.102
  phase: Running
  podIP: 192.168.194.67
  podIPs:
  - ip: 192.168.194.67
  qosClass: BestEffort
  startTime: "2022-04-22T00:06:30Z"
