init-container-pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: tim-test-web
spec:
  containers:
  - name: nginx
    image: nginx:1.19.1
---
apiVersion: v1
kind: Service
metadata:
  name: test-web-svc
spec:
  selector:
    app: test-web-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: tim-test-web-backend
  labels:
   app: test-web-svc
spec:
  containers:
  - name: nginx
    image: nginx:1.19.1
