ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: tim-web-external-service
spec:
  type: NodePort #external service
  selector:
    app: frontend-web #this creates a label for all connecting pods to match
  ports:
  - name: external-web
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: tim-web-internal-service
spec:
  type: ClusterIP #external service
  selector:
    app: frontend-web #this creates a label for all connecting pods to match
  ports:
  - name: internal-web
    protocol: TCP
    port: 80
    targetPort: 80
    #nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-servers
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: frontend-web #this will match the labels on the tim-web-external-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend-web
    spec:
      containers:
      - image: nginx:1.19.1
        imagePullPolicy: IfNotPresent
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tim-web-internal-service-ingress
spec:
  rules:
  - http:
      paths:
      - path: /first
        pathType: Prefix
        backend:
          service:
            name: tim-web-internal-service
            port:
              name: internal-web
